--- a/code/AnalogDigital.html
+++ b/code/AnalogDigital.html
@@ -1,255 +1,311 @@
 <!DOCTYPE html>
 <html lang="ja">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ストップウォッチ</title>
-    <link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>アナログ時計とストップウォッチ</title>
+  <style>
+    #analog {
+      height: 200px;
+      width: 200px;
+      position: relative;
+      margin: 0 auto;
+    }
+    .analog-face {
+      border: 3px solid black;
+      background-color: white;
+      border-radius: 50%;
+      position: absolute;
+    }
+    .analog-line1, .analog-line2 {
+      position: absolute;
+      left: 0;
+      z-index: 1;
+    }
+    .analog-line1 {
+      width: 5px;
+      height: 3px;
+      background: black;
+      top: calc(50% - 2px);
+    }
+    .analog-line2 {
+      width: 3px;
+      height: 2px;
+      background: black;
+      top: calc(50% - 1px);
+    }
+    .analog-text {
+      color: black;
+      font-size: 1em;
+      position: absolute;
+      transform: translate(-50%, -50%);
+      z-index: 2;
+    }
+    .analog-seconds {
+      background-color: red;
+      width: 3px;
+      position: absolute;
+      z-index: 10;
+      border-radius: 3px;
+    }
+    .analog-hours {
+      background-color: black;
+      width: 5px;
+      position: absolute;
+      z-index: 8;
+      border-radius: 3px;
+    }
+    .analog-minutes {
+      background-color: black;
+      width: 5px;
+      position: absolute;
+      z-index: 9;
+      border-radius: 3px;
+    }
+    .analog-center, .analog-center:after {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      z-index: 15;
+      border-radius: 50%;
+    }
+    .analog-center {
+      background-color: black;
+      height: 11px;
+      width: 11px;
+      transform: translate(-6px, -6px);
+    }
+    .analog-center:after {
+      content: "";
+      background-color: silver;
+      height: 9px;
+      width: 9px;
+      transform: translate(-5px, -5px);
+    }
+    .buttons {
+      margin-top: 20px;
+    }
+    .buttons button {
+      margin-right: 10px;
+    }
+    .log-output {
+      width: 100%;
+      height: 100px;
+      margin-top: 20px;
+    }
+    #stopwatch-display {
+      text-align: center;
+      font-size: 2em;
+      margin: 20px 0;
+    }
+    #stopwatch-label {
+      text-align: center;
+      font-size: 1.5em;
+      margin-top: 20px;
+    }
+    #digital-clock {
+      text-align: center;
+      font-size: 2em;
+      margin: 20px 0;
+    }
+    #digital-clock-label {
+      text-align: center;
+      font-size: 1.5em;
+      margin-top: 20px;
+    }
+  </style>
 </head>
 <body>
-    <div class="container">
-        <div class="current-time">
-            <div class="clock">
-                <div class="ticks"></div>
-                <div class="number number1">1</div>
-                <div class="number number2">2</div>
-                <div class="number number3">3</div>
-                <div class="number number4">4</div>
-                <div class="number number5">5</div>
-                <div class="number number6">6</div>
-                <div class="number number7">7</div>
-                <div class="number number8">8</div>
-                <div class="number number9">9</div>
-                <div class="number number10">10</div>
-                <div class="number number11">11</div>
-                <div class="number number12">12</div>
-                <div class="hand hour" id="hourHand"></div>
-                <div class="hand minute" id="minuteHand"></div>
-                <div class="hand second" id="secondHand"></div>
-                <div class="center-dot"></div>
-            </div>
-            <div class="current-time-display">00:00:00</div>
-        </div>
-        <div class="stopwatch">
-            <div class="stopwatch-time">00:00:00</div>
-            <div class="buttons">
-                <button id="start">スタート</button>
-                <button id="stop">ストップ</button>
-                <button id="reset">終了</button>
-            </div>
-        </div>
-        <div class="textarea-container">
-            <textarea id="taskInput" placeholder="タスクを入力"></textarea>
-            <button id="log">コピー</button>
-            <div id="logOutput"></div>
-        </div>
-    </div>
-</body>
+  <div id="analog"></div>
+  <div id="digital-clock-label">デジタル時計</div>
+  <div id="digital-clock">00:00:00</div>
+  <div id="stopwatch-label">ストップウォッチ</div>
+  <div id="stopwatch-display">00:00:00</div>
+  <div class="buttons">
+    <button id="start">スタート</button>
+    <button id="stop">ストップ</button>
+    <button id="reset">リセット</button>
+    <button id="log">コピー</button>
+  </div>
+  <textarea id="logOutput" class="log-output" readonly></textarea>
 
-<script>
-document.addEventListener("DOMContentLoaded", function() {
-    // Elements
-    const currentTimeDisplay = document.querySelector(".current-time-display");
-    const hourHand = document.getElementById("hourHand");
-    const minuteHand = document.getElementById("minuteHand");
-    const secondHand = document.getElementById("secondHand");
-    const stopwatchTime = document.querySelector(".stopwatch-time");
-    const startButton = document.getElementById("start");
-    const stopButton = document.getElementById("stop");
-    const resetButton = document.getElementById("reset");
-    const taskInput = document.getElementById("taskInput");
-    const logButton = document.getElementById("log");
-    const logOutput = document.getElementById("logOutput");
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      const currentTimeDisplay = document.getElementById("digital-clock");
+      const startButton = document.getElementById("start");
+      const stopButton = document.getElementById("stop");
+      const resetButton = document.getElementById("reset");
+      const logButton = document.getElementById("log");
+      const logOutput = document.getElementById("logOutput");
+      const stopwatchDisplay = document.getElementById("stopwatch-display");
 
-    // Variables
-    let stopwatchInterval;
-    let elapsedTime = 0;
+      let stopwatchInterval;
+      let elapsedTime = 0;
+      let startTime;
 
-    // Update current time and analog clock
-    function updateCurrentTime() {
-        const jst = new Date(Date.now() + ((new Date().getTimezoneOffset() + (9 * 60)) * 60 * 1000));
-        const hours = jst.getHours();
-        const minutes = jst.getMinutes();
-        const seconds = jst.getSeconds();
-
-        const hoursFormatted = String(hours).padStart(2, '0');
-        const minutesFormatted = String(minutes).padStart(2, '0');
-        const secondsFormatted = String(seconds).padStart(2, '0');
-        currentTimeDisplay.textContent = `${hoursFormatted}:${minutesFormatted}:${secondsFormatted}`;
-
-        const hourDegrees = (hours % 12) * 30 + (minutes / 60) * 30;
-        const minuteDegrees = minutes * 6;
-        const secondDegrees = seconds * 6;
-
-        hourHand.style.transform = `rotate(${hourDegrees - 270}deg)`;
-        minuteHand.style.transform = `rotate(${minuteDegrees - 270}deg)`;
-        secondHand.style.transform = `rotate(${secondDegrees - 270}deg)`;
-    }
-    setInterval(updateCurrentTime, 1000);
-    updateCurrentTime();
-
-    // Update stopwatch
-    function updateStopwatch() {
-        elapsedTime += 1000;
-        const totalSeconds = Math.floor(elapsedTime / 1000);
+      function formatTime(ms) {
+        const totalSeconds = Math.floor(ms / 1000);
         const hours = String(Math.floor(totalSeconds / 3600)).padStart(2, '0');
         const minutes = String(Math.floor((totalSeconds % 3600) / 60)).padStart(2, '0');
         const seconds = String(totalSeconds % 60).padStart(2, '0');
-        stopwatchTime.textContent = `${hours}:${minutes}:${seconds}`;
-    }
+        return `${hours}:${minutes}:${seconds}`;
+      }
 
-    // Start stopwatch
-    startButton.addEventListener("click", function() {
+      function updateStopwatch() {
+        elapsedTime = Date.now() - startTime;
+        stopwatchDisplay.textContent = formatTime(elapsedTime);
+      }
+
+      startButton.addEventListener("click", function() {
         if (!stopwatchInterval) {
-            stopwatchInterval = setInterval(updateStopwatch, 1000);
+          startTime = Date.now() - elapsedTime;
+          logOutput.value = `開始時間: ${new Date(startTime).toLocaleTimeString()}\n`;
+          stopwatchInterval = setInterval(updateStopwatch, 1000);
         }
-    });
+      });
 
-    // Stop stopwatch
-    stopButton.addEventListener("click", function() {
+      stopButton.addEventListener("click", function() {
         if (stopwatchInterval) {
-            clearInterval(stopwatchInterval);
-            stopwatchInterval = null;
+          clearInterval(stopwatchInterval);
+          stopwatchInterval = null;
+          const stopTime = new Date();
+          logOutput.value += `終了時間: ${stopTime.toLocaleTimeString()}\n`;
+          logOutput.value += `経過時間: ${stopwatchDisplay.textContent}\n`;
         }
-    });
+      });
 
-    // Reset stopwatch
-    resetButton.addEventListener("click", function() {
+      resetButton.addEventListener("click", function() {
         clearInterval(stopwatchInterval);
         stopwatchInterval = null;
         elapsedTime = 0;
-        stopwatchTime.textContent = "00:00:00";
+        stopwatchDisplay.textContent = "00:00:00";
+        logOutput.value = '';
+      });
+
+      logButton.addEventListener("click", function() {
+        logOutput.select();
+        document.execCommand("copy");
+      });
+
+      const addDiv = (parentDiv, className, callBack = null) => {
+        const t = document.createElement("div");
+        t.classList.add(className);
+        if (callBack && typeof callBack === "function") callBack(t);
+        parentDiv.appendChild(t);
+        return t;
+      };
+
+      const createFace = () => {
+        const analog = document.getElementById("analog");
+        const vp = [analog.clientWidth, analog.clientHeight];
+        const chokei = Math.min(...vp);
+
+        const analogFace = addDiv(analog, "analog-face", (t) => {
+          [t.style.height, t.style.width] = [chokei + "px", chokei + "px"];
+          [t.style.top, t.style.left] = [(vp[1] - chokei) / 2 + "px", (vp[0] - chokei) / 2 + "px"];
+        });
+
+        const r60 = 360 / 60;
+        const originX = analogFace.clientWidth / 2;
+
+        for (let i = 0; i < 60; i++) {
+          const deg = i * r60;
+
+          addDiv(analogFace, i % 5 === 0 ? "analog-line1" : "analog-line2", (t) => {
+            if (i > 0) {
+              t.style.transformOrigin = `${originX}px center`;
+              t.style.transform = `rotate(${deg}deg)`;
+            }
+          });
+        }
+
+        const r12 = 360 / 12;
+        const hankei = originX;
+        const moziPos = hankei - 30;
+        const MathPi = Math.PI / 180;
+
+        for (let i = 0; i < 12; i++) {
+          const deg = i * r12;
+          addDiv(analogFace, "analog-text", (t) => {
+            const mojiX = hankei + moziPos * Math.sin(deg * MathPi);
+            const mojiY = hankei - moziPos * Math.cos(deg * MathPi);
+            [t.style.top, t.style.left] = [mojiY + "px", mojiX + "px"];
+            t.innerText = i === 0 ? "12" : i.toString();
+          });
+        }
+
+        addDiv(analogFace, "analog-center");
+
+        return analogFace;
+      };
+
+      const firstTransition = "transform 0.5s ease-out";
+
+      const handObj = function (className, { parentDiv: parentDiv, LengthPer: LengthPer, handGapPer: handGapPer, divNum: divNum }) {
+        const hankei = parentDiv.clientHeight / 2;
+        const handLength = hankei * LengthPer / 100;
+        const handGap = hankei * handGapPer / 100;
+
+        const elm = addDiv(parentDiv, className);
+
+        elm.style.height = (handLength + handGap) + "px";
+        [elm.style.top, elm.style.left] = [(hankei - handLength) + "px", (hankei - elm.clientWidth / 2) + "px"];
+        elm.style.transformOrigin = `center ${handLength}px `;
+        elm.style.transition = className === "analog-seconds" ? "none" : firstTransition;
+
+        this.rotateText = [];
+        this.currentValue = 0;
+        this.elm = elm;
+
+        const r = 360 / divNum;
+        for (let i = 0; i < divNum; i++) {
+          this.rotateText.push(`rotate(${i * r}deg)`);
+        }
+
+        this.moveHand = function (val) {
+          if (this.currentValue !== val) {
+            this.elm.style.transform = this.rotateText[val];
+            this.currentValue = val;
+          }
+        };
+      };
+
+      const analogFace = createFace();
+
+      const secondHand = new handObj("analog-seconds", {
+        parentDiv: analogFace,
+        LengthPer: 85,
+        handGapPer: 20,
+        divNum: 60 * 10 // Higher resolution for smooth seconds hand
+      });
+
+      const hourHand = new handObj("analog-hours", {
+        parentDiv: analogFace,
+        LengthPer: 55,
+        handGapPer: 10,
+        divNum: 12 * 60
+      });
+
+      const minuteHand = new handObj("analog-minutes", {
+        parentDiv: analogFace,
+        LengthPer: 80,
+        handGapPer: 10,
+        divNum: 60
+      });
+
+      setInterval(() => {
+        const date = new Date();
+        secondHand.moveHand(date.getSeconds() * 10 + Math.floor(date.getMilliseconds() / 100));
+        hourHand.moveHand((date.getHours() % 12) * 60 + date.getMinutes());
+        minuteHand.moveHand(date.getMinutes());
+      }, 100);
+
+      setInterval(() => {
+        const now = new Date();
+        currentTimeDisplay.textContent = now.toLocaleTimeString('ja-JP', { hour12: false });
+      }, 1000);
     });
-
-    // Log task input
-    logButton.addEventListener("click", function() {
-        const task = taskInput.value;
-        const logEntry = `タスク: ${task}\n経過時間: ${stopwatchTime.textContent}`;
-        logOutput.textContent = logEntry;
-    });
-});
-</script>
-
-<style>
-body {
-    font-family: Arial, sans-serif;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
-    margin: 0;
-}
-
-.container {
-    text-align: center;
-}
-
-.current-time {
-    margin-bottom: 20px;
-}
-
-.clock {
-    position: relative;
-    width: 200px;
-    height: 200px;
-    border: 2px solid black;
-    border-radius: 50%;
-    margin: 0 auto 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.number {
-    position: absolute;
-    text-align: center;
-    transform: translate(-50%, -50%);
-}
-
-.number1 { top: 20%; left: 80%; }
-.number2 { top: 34%; left: 87%; }
-.number3 { top: 50%; left: 93%; }
-.number4 { top: 66%; left: 87%; }
-.number5 { top: 80%; left: 80%; }
-.number6 { top: 87%; left: 50%; }
-.number7 { top: 80%; left: 20%; }
-.number8 { top: 66%; left: 13%; }
-.number9 { top: 50%; left: 7%; }
-.number10 { top: 34%; left: 13%; }
-.number11 { top: 20%; left: 20%; }
-.number12 { top: 7%; left: 50%; }
-
-.hand {
-    position: absolute;
-    top: 50%;
-    transform-origin: 100%;
-    transform: rotate(0deg);
-}
-
-.hour {
-    width: 40px; /* Shorter length for hour hand */
-    height: 4px;
-    background: black;
-    left: 60px; /* Center alignment */
-}
-
-.minute {
-    width: 60px; /* Longer length for minute hand */
-    height: 3px;
-    background: black;
-    left: 40px; /* Center alignment */
-}
-
-.second {
-    width: 50px; /* Medium length for second hand */
-    height: 2px;
-    background: red;
-    left: 50px; /* Center alignment */
-}
-
-.center-dot {
-    position: absolute;
-    width: 6px;
-    height: 6px;
-    background: black;
-    border-radius: 50%;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-}
-
-.current-time-display {
-    font-size: 24px;
-}
-
-.stopwatch {
-    margin-bottom: 20px;
-}
-
-.stopwatch-time {
-    font-size: 36px;
-    margin-bottom: 10px;
-}
-
-.buttons button {
-    margin: 5px;
-    padding: 10px 20px;
-    font-size: 16px;
-}
-
-.textarea-container {
-    margin-top: 20px;
-}
-
-#taskInput {
-    width: 300px;
-    height: 100px;
-}
-
-#logOutput {
-    margin-top: 10px;
-    white-space: pre-wrap;
-}
-</style>
-
+  </script>
+</body>
 </html>
