--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 <h2>ファイル一覧</h2><br>
-<a href="./code/AnalogDigital.html" target="_blank">AnalogDigital2.html</a><br>
+<a href="./code/AnalogDigital.html" target="_blank">AnalogDigital.html</a><br>
 <a href="./code/clock2.html" target="_blank">clock2.html</a><br>
 <a href="./code/StopWatch.html" target="_blank">StopWatch.html</a><br>
 <a href="./code/VisualTimer.html" target="_blank">VisualTimer.html</a><br>
