--- a/code/VisualTimer.html
+++ b/code/VisualTimer.html
@@ -1,10 +1,12 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ビジュアルタイマー</title>
 </head>
+
 <body>
     <div class="timer-container">
         <svg class="timer" viewBox="0 0 100 100">
@@ -30,114 +32,116 @@
     </div>
     <input type="number" id="minutes-input" placeholder="分数を入力" min="1">
     <button id="start-button">スタート</button>
-</body>
-<script>
-let timerInterval;
 
-document.getElementById('start-button').addEventListener('click', startTimer);
+    <script>
+        let timerInterval;
 
-function startTimer() {
-    const minutesInput = document.getElementById('minutes-input').value;
-    const duration = minutesInput * 60; // 入力された分を秒に変換
+        document.getElementById('start-button').addEventListener('click', startTimer);
 
-    if (isNaN(duration) || duration <= 0) {
-        alert('正しい分数を入力してください');
-        return;
-    }
+        function startTimer() {
+            const minutesInput = document.getElementById('minutes-input').value;
+            const duration = minutesInput * 60; // 入力された分を秒に変換
 
-    clearInterval(timerInterval);
-    const timer = document.querySelector('.timer-progress');
-    const timerText = document.querySelector('.timer-text');
-    let timeLeft = duration;
-    const totalLength = 251.2; // 2πr で計算した円の周長 (2 * π * 40)
+            if (isNaN(duration) || duration <= 0) {
+                alert('正しい分数を入力してください');
+                return;
+            }
 
-    const endOffset = (duration / (60 * 60)) * 360; // 最後の位置を角度に換算
-    const startOffset = 0;
-    const rangeOffset = endOffset - startOffset;
-
-    timerInterval = setInterval(() => {
-        if (timeLeft <= 0) {
             clearInterval(timerInterval);
-            timerText.textContent = '00:00';
-        } else {
-            timeLeft--;
-            const minutes = Math.floor(timeLeft / 60);
-            const seconds = timeLeft % 60;
-            timerText.textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
+            const timer = document.querySelector('.timer-progress');
+            const timerText = document.querySelector('.timer-text');
+            let timeLeft = duration;
+            const totalLength = 251.2; // 2πr で計算した円の周長 (2 * π * 40)
 
-            const progress = (timeLeft / duration) * rangeOffset;
-            timer.style.strokeDashoffset = totalLength - ((progress / 360) * totalLength);
+            const endOffset = (duration / (60 * 60)) * 360; // 最後の位置を角度に換算
+            const startOffset = 0;
+            const rangeOffset = endOffset - startOffset;
+
+            timerInterval = setInterval(() => {
+                if (timeLeft <= 0) {
+                    clearInterval(timerInterval);
+                    timerText.textContent = '00:00';
+                } else {
+                    timeLeft--;
+                    const minutes = Math.floor(timeLeft / 60);
+                    const seconds = timeLeft % 60;
+                    timerText.textContent = `${minutes}:${seconds.toString().padStart(2, '0')}`;
+
+                    const progress = (timeLeft / duration) * rangeOffset;
+                    timer.style.strokeDashoffset = totalLength - ((progress / 360) * totalLength);
+                }
+            }, 1000);
         }
-    }, 1000);
-}
-</script>
+    </script>
 
-<style>
-body {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    height: 100vh;
-    margin: 0;
-    font-family: Arial, sans-serif;
-}
+    <style>
+        body {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+            font-family: Arial, sans-serif;
+            overflow: hidden; /* ウィンドウの幅と高さを変えないようにする */
+        }
 
-.timer-container {
-    position: relative;
-    width: 200px;
-    height: 200px;
-}
+        .timer-container {
+            position: relative;
+            width: 50vmin; /* 形を変えずに表示する */
+            height: 50vmin; /* 形を変えずに表示する */
+        }
 
-.timer {
-    width: 100%;
-    height: 100%;
-    transform: rotate(-90deg);
-}
+        .timer {
+            width: 100%;
+            height: 100%;
+            transform: rotate(-90deg);
+        }
 
-.timer-bg {
-    fill: none;
-    stroke: #e6e6e6;
-    stroke-width: 8;
-}
+        .timer-bg {
+            fill: none;
+            stroke: #e6e6e6;
+            stroke-width: 8;
+        }
 
-.timer-progress {
-    fill: none;
-    stroke: red;
-    stroke-width: 8;
-    stroke-dasharray: 251.2; /* 2πr (2 * π * 40) */
-    stroke-dashoffset: 0;
-    transition: stroke-dashoffset 1s linear;
-}
+        .timer-progress {
+            fill: none;
+            stroke: red;
+            stroke-width: 8;
+            stroke-dasharray: 251.2; /* 2πr (2 * π * 40) */
+            stroke-dashoffset: 0;
+            transition: stroke-dashoffset 1s linear;
+        }
 
-.timer-marks text {
-    font-size: 5px;
-    fill: black;
-    transform: rotate(90deg);
-    transform-origin: center;
-}
+        .timer-marks text {
+            font-size: 5px;
+            fill: black;
+            transform: rotate(90deg);
+            transform-origin: center;
+        }
 
-.timer-text {
-    font-size: 10px;
-    fill: black;
-    transform: rotate(90deg);
-    transform-origin: center;
-}
+        .timer-text {
+            font-size: 10px;
+            fill: black;
+            transform: rotate(90deg);
+            transform-origin: center;
+        }
 
-input {
-    margin-top: 20px;
-    padding: 10px;
-    font-size: 16px;
-    width: 100px;
-    text-align: center;
-}
+        input {
+            margin-top: 20px;
+            padding: 10px;
+            font-size: 16px;
+            width: 100px;
+            text-align: center;
+        }
 
-button {
-    margin-top: 10px;
-    padding: 10px 20px;
-    font-size: 16px;
-    cursor: pointer;
-}
-</style>
+        button {
+            margin-top: 10px;
+            padding: 10px 20px;
+            font-size: 16px;
+            cursor: pointer;
+        }
+    </style>
+</body>
 
 </html>
