--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
 <a href="./code/StopWatch.html" target="_blank">StopWatch.html</a><br>
 <a href="./code/VisualTimer.html" target="_blank">VisualTimer.html</a><br>
 <a href="./code/VisualTimer2.html" target="_blank">VisualTimer2.html</a><br>
+<a href="./code/IntegratedActionboard.html" target="_blank">IntegratedActionboard.html</a><br>
 </body>
 </html>
